--- a/docs/2021-12.md
+++ b/docs/2021-12.md
@@ -2,26 +2,26 @@
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">In C#, you can use an IServiceScopeFactory to create a new Scope.<br><br>This scope is strictly related to the &quot;scoped&quot; dependency injection lifetime.<br><br>I&#39;ve never used it, so I have a question for you: WHY would you create scopes? <a href="https://twitter.com/hashtag/csharp?src=hash&amp;ref_src=twsrc%5Etfw">#csharp</a><br> <a href="https://t.co/WPy43lq9Xv">https://t.co/WPy43lq9Xv</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1476618052183724033?ref_src=twsrc%5Etfw">December 30, 2021</a>
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">SOLID principles were born thinking about OOP.<br><br>But, in a different way, they&#39;re valid for software architecture too.<br><br>When defining your architecture, remember to follow those principles.<br><br>Eg: a service/module should have a single reason to change (SRP)<br> http://about:blank</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1476255768030629895?ref_src=twsrc%5Etfw">December 29, 2021</a>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">SOLID principles were born thinking about OOP.<br><br>But, in a different way, they&#39;re valid for software architecture too.<br><br>When defining your architecture, remember to follow those principles.<br><br>Eg: a service/module should have a single reason to change (SRP)<br> http://about:blank</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1476255768030629895?ref_src=twsrc%5Etfw">December 29, 2021</a> </blockquote> 
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">🛣 partial 🛣 classes can be spread across multiple files<br><br>You generally don&#39;t declare classes as partial<br><br>But automatic tools can!<br><br>Auto-generated classes are marked as partial to add functionalities to an existing class without fully recreating it<br><br>Remember WinForms?<a href="https://twitter.com/hashtag/csharp?src=hash&amp;ref_src=twsrc%5Etfw">#csharp</a> <a href="https://t.co/xInkIUgvOD">pic.twitter.com/xInkIUgvOD</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1475530930517430276?ref_src=twsrc%5Etfw">December 27, 2021</a>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">🛣 partial 🛣 classes can be spread across multiple files<br><br>You generally don&#39;t declare classes as partial<br><br>But automatic tools can!<br><br>Auto-generated classes are marked as partial to add functionalities to an existing class without fully recreating it<br><br>Remember WinForms?<a href="https://twitter.com/hashtag/csharp?src=hash&amp;ref_src=twsrc%5Etfw">#csharp</a> <a href="https://t.co/xInkIUgvOD">pic.twitter.com/xInkIUgvOD</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1475530930517430276?ref_src=twsrc%5Etfw">December 27, 2021</a></blockquote> 
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Write only meaningful tests, <br><br>Avoid writing them only to reach a certain % of code coverage.<br><br>Otherwise, you&#39;ll be wasting time<br>- writing them<br>- running them<br>- maintaining them</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1475353605641285635?ref_src=twsrc%5Etfw">December 27, 2021</a>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Write only meaningful tests, <br><br>Avoid writing them only to reach a certain % of code coverage.<br><br>Otherwise, you&#39;ll be wasting time<br>- writing them<br>- running them<br>- maintaining them</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1475353605641285635?ref_src=twsrc%5Etfw">December 27, 2021</a></blockquote> 
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">You can have all the resources in this world (blogs, official docs, courses, etc).<br><br>But that&#39;s not enough to be able to succeed: <br><br>🐌 Slow down<br>🎯 Focus on what you really need/care<br>📒 Take notes<br><br>A good mindset is a key to success.</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1474266456951242753?ref_src=twsrc%5Etfw">December 24, 2021</a>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">You can have all the resources in this world (blogs, official docs, courses, etc).<br><br>But that&#39;s not enough to be able to succeed: <br><br>🐌 Slow down<br>🎯 Focus on what you really need/care<br>📒 Take notes<br><br>A good mindset is a key to success.</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1474266456951242753?ref_src=twsrc%5Etfw">December 24, 2021</a></blockquote> 
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">A C# class marked as 🔒 sealed 🔒 cannot have subclasses<br><br>Sealed works for methods and properties too!<br><br>class A<br>{<br> virtual void Foo();<br>}<br><br>class B : A<br>{<br> sealed override void Foo();<br>}<br><br>In this way, B&#39;s subclasses cannot override Foo.<a href="https://twitter.com/hashtag/csharp?src=hash&amp;ref_src=twsrc%5Etfw">#csharp</a> <a href="https://t.co/YyncArDnea">pic.twitter.com/YyncArDnea</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1474081566037004300?ref_src=twsrc%5Etfw">December 23, 2021</a>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">A C# class marked as 🔒 sealed 🔒 cannot have subclasses<br><br>Sealed works for methods and properties too!<br><br>class A<br>{<br> virtual void Foo();<br>}<br><br>class B : A<br>{<br> sealed override void Foo();<br>}<br><br>In this way, B&#39;s subclasses cannot override Foo.<a href="https://twitter.com/hashtag/csharp?src=hash&amp;ref_src=twsrc%5Etfw">#csharp</a> <a href="https://t.co/YyncArDnea">pic.twitter.com/YyncArDnea</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1474081566037004300?ref_src=twsrc%5Etfw">December 23, 2021</a></blockquote> 
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Have you learned something from the Log4J issue?<br><br>I think that we should start thinking more about the usage of OSS products and tools.<br><br>Especially widely used ones should be actively maintained in a professional way, by paid developers.<br><br>OSS != safe. Not always</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1473904047014957059?ref_src=twsrc%5Etfw">December 23, 2021</a>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Have you learned something from the Log4J issue?<br><br>I think that we should start thinking more about the usage of OSS products and tools.<br><br>Especially widely used ones should be actively maintained in a professional way, by paid developers.<br><br>OSS != safe. Not always</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1473904047014957059?ref_src=twsrc%5Etfw">December 23, 2021</a></blockquote> 
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">A short recap of class access modifiers in <a href="https://twitter.com/hashtag/csharp?src=hash&amp;ref_src=twsrc%5Etfw">#csharp</a>:<br><br>🌍 public: everyone can access it<br>🔐 private: can be called only by the class itself<br>🏡 internal: accessible only within the same assembly<br>👨‍👩‍👧‍👦 protected: only for the class itself and its derived types</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1472994281220722691?ref_src=twsrc%5Etfw">December 20, 2021</a>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">A short recap of class access modifiers in <a href="https://twitter.com/hashtag/csharp?src=hash&amp;ref_src=twsrc%5Etfw">#csharp</a>:<br><br>🌍 public: everyone can access it<br>🔐 private: can be called only by the class itself<br>🏡 internal: accessible only within the same assembly<br>👨‍👩‍👧‍👦 protected: only for the class itself and its derived types</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1472994281220722691?ref_src=twsrc%5Etfw">December 20, 2021</a></blockquote> 
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">&quot;Full stack&quot; dev is an odd name.<br><br>What is part of the &quot;full&quot; stack?<br><br>Web? Mobile apps? Servers? DBs? CDNs? Networks? ML Models?</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1472816916502822912?ref_src=twsrc%5Etfw">December 20, 2021</a>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">&quot;Full stack&quot; dev is an odd name.<br><br>What is part of the &quot;full&quot; stack?<br><br>Web? Mobile apps? Servers? DBs? CDNs? Networks? ML Models?</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1472816916502822912?ref_src=twsrc%5Etfw">December 20, 2021</a></blockquote> 
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">A question for <a href="https://twitter.com/hashtag/dotnet?src=hash&amp;ref_src=twsrc%5Etfw">#dotnet</a> devs: <br><br>What&#39;s the real meaning of &quot;StringComparer.InvariantCulture&quot;?<br><br>When sorting non-latin strings with LINQ&#39;s OrderBy, you can get the same result with or without specifying the StringComparer.<br><br>So, is it really useful? <a href="https://t.co/DGmygZ0Jtr">pic.twitter.com/DGmygZ0Jtr</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1471544703644585991?ref_src=twsrc%5Etfw">December 16, 2021</a>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">A question for <a href="https://twitter.com/hashtag/dotnet?src=hash&amp;ref_src=twsrc%5Etfw">#dotnet</a> devs: <br><br>What&#39;s the real meaning of &quot;StringComparer.InvariantCulture&quot;?<br><br>When sorting non-latin strings with LINQ&#39;s OrderBy, you can get the same result with or without specifying the StringComparer.<br><br>So, is it really useful? <a href="https://t.co/DGmygZ0Jtr">pic.twitter.com/DGmygZ0Jtr</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1471544703644585991?ref_src=twsrc%5Etfw">December 16, 2021</a></blockquote> 
 
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">In <a href="https://twitter.com/hashtag/DDD?src=hash&amp;ref_src=twsrc%5Etfw">#DDD</a>, domain objects are mainly grouped into 2 types: Value Types and Entities.<br><br>👨‍🎤 Entities: are defined by an ID, and not by its attributes. Eg: Person(ID, name, lastname)<br><br>🗿 Value object: no ID, only attributes. Eg: Price(value, currency)</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1471182332019331072?ref_src=twsrc%5Etfw">December 15, 2021</a>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">In <a href="https://twitter.com/hashtag/DDD?src=hash&amp;ref_src=twsrc%5Etfw">#DDD</a>, domain objects are mainly grouped into 2 types: Value Types and Entities.<br><br>👨‍🎤 Entities: are defined by an ID, and not by its attributes. Eg: Person(ID, name, lastname)<br><br>🗿 Value object: no ID, only attributes. Eg: Price(value, currency)</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1471182332019331072?ref_src=twsrc%5Etfw">December 15, 2021</a></blockquote> 
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">There are 2 main types of refactoring. Bottom-up and Top-down.<br><br>⬆Bottom-up: refactor the single class/method, then move to the callers<br><br>⬇Top-down: Improve the project structure (folders, namespaces), and then improve the single classes.<a href="https://twitter.com/hashtag/cleancode?src=hash&amp;ref_src=twsrc%5Etfw">#cleancode</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1470280203687632898?ref_src=twsrc%5Etfw">December 13, 2021</a></blockquote> 
 
